Working version up to assignment specification

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-        <h1>Seattle Traffic Cameras</h1>
+        <h1>Seattle Traffic Cameras <img id="ajax-loader" src="img/ajax-loader.gif" alt="loading data animation"/></h1>
 
         <p>
             <input type="search" id="search" placeholder="Search for specific street names...">
